implement rabbitmq and fix bugs

--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,4 @@ export USNAME=root
 export PSWORD=password
 export HOST=127.0.0.1:3306
 export DBNAME=sendchamp
+export RABBITURI='amqp://guest:guest@localhost:5672/'
